<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/task_bar_main">

    <TextView style="@style/pink_bar"
        android:id="@+id/taskbar_band"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/color_primary_draw" />

    <LinearLayout style="@style/blue_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/color_primary_draw" >

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/sort_filter_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/sort_button_label"
            android:src="@drawable/taskbar_sort" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/tag_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/tag_button_label"
            android:src="@drawable/taskbar_tag" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/add_item_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/add_button_label"
            android:src="@drawable/taskbar_add" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/delete_item_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/delete_button_label"
            android:src="@drawable/taskbar_delete" />

        <ImageButton style="@style/taskbar_button"
            android:id="@+id/profile_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_button_label"
            android:src="@drawable/taskbar_profile" />

    </LinearLayout>

</LinearLayout>
