...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorSecondary"
            android:textColor="?colorOnSecondary"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_dialog_button"
            app:layout_constraintEnd_toStartOf="@+id/delete_dialog_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_dialog_button"
            android:layout_width="wrap_content"
...
