...
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorPrimary" />

            <TextView
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:clickable="true"
                android:paddingLeft="5dp"
                android:text="Log out"
...
